Menambahkan deskripsi paragraph di index.html

--- a/index.html
+++ b/index.html
@@ -30,6 +30,10 @@
 			<td>SMK TI Bali Global Denpasar</td>
 		</tr>
 	</table>
+
+	<p>
+		Faisa merupakan salah satu siswa dari SMK TI Bali Global Denpasar yang memiliki keinginan besar dalam belajar akan hal-hal baru dan menantang. Meskipun ia tidak terlalu percaya akan kekuatannya tapi ia adalah orang yang baik dan suka menolong sesama.
+	</p>
 	
 </body>
 </html>
